# ChangeLog for net-im/naim
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/naim/ChangeLog,v 1.68 2008/08/05 17:45:05 gentoofan23 Exp $

  05 Aug 2008; Thomas Anderson <gentoofan23@gentoo.org> metadata.xml:
  Add USE flag description to metadata as per GLEP 56.

*naim-0.11.8.3.1 (27 Mar 2008)

  27 Mar 2008; Santiago M. Mola <coldwind@gentoo.org> -naim-0.11.7.1.ebuild,
  +naim-0.11.8.3.1.ebuild:
  Version bump (bug #186275) and remove old.

  05 Feb 2008; Fabian Groffen <grobian@gentoo.org> naim-0.11.7.1.ebuild,
  naim-0.11.7.2.ebuild, naim-0.11.8.2.1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  17 Mar 2007; Piotr Jaroszyński <peper@gentoo.org>
  files/digest-naim-0.11.8.2.1, Manifest:
  Fix Manifest.

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  20 Jan 2007; Markus Rothe <corsair@gentoo.org> naim-0.11.8.2.1.ebuild:
  Added ~ppc64

*naim-0.11.8.2.1 (14 Jan 2007)

  14 Jan 2007; Olivier Crête <tester@gentoo.org> -naim-0.11.6.1.ebuild,
  -naim-0.11.6.4.ebuild, -naim-0.11.6.7.ebuild, -naim-0.11.7.3.1.ebuild,
  -naim-0.11.8.1.ebuild, -naim-0.11.8.2.ebuild, +naim-0.11.8.2.1.ebuild:
  New version of naim, cleanup old versions

  14 Oct 2006; Thomas Cort <tcort@gentoo.org> naim-0.11.8.2.ebuild:
  Added ~amd64 keyword wrt Bug #148258.

  02 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>; naim-0.11.8.2.ebuild:
  Keyword ~ppc.

  11 Aug 2006; Jason Wever <weeve@gentoo.org> naim-0.11.8.2.ebuild:
  Added ~sparc keyword as it mysteriously went missing in this version.

  09 Aug 2006; Karol Pasternak <reb@gentoo.org> naim-0.11.8.2.ebuild:
  replace emake with make, bug #139329

*naim-0.11.8.2 (28 Jun 2006)

  28 Jun 2006; Karol Pasternak <reb@gentoo.org> +naim-0.11.8.2.ebuild:
  New version

  11 May 2006; Karol Pasternak <reb@gentoo.org> naim-0.11.8.1.ebuild:
  broken dependency syntax, #133000

*naim-0.11.8.1 (30 Jan 2006)
