@@ -1,6 +1,6 @@
 DIST naim-0.11.8.2.1.tar.bz2 419133 RMD160 2bdbb0a08d7b999bfc80656fa203ba1be9a3ffed SHA1 820f8f92b1dc26a69f7af0a4646cc83fdcdabf94 SHA256 7aa6f1484add6539fe15b3449337f5305ece32a0550f3d47f02021a47abee560
 DIST naim-0.11.8.3.1.tar.bz2 419762 RMD160 8c0335d9cccc320646747fa4adf02fa47cfc644b SHA1 b3ecc917d2f6e41097635a48438585c79e14db88 SHA256 a629efbd182552712009b0636c7b8be0c190052a3303c8de66a3649a9df4f224
-EBUILD naim-0.11.8.2.1.ebuild 1298 RMD160 b85701045e22129f5658312230cfb7783b4cc1fb SHA1 a6fec665030db888ac8e2f1b765561a85452cdbb SHA256 bcce6f6b521e4cbabc3fb6ed3cfcc8cd0822d813a5d4c64b6c029daa9da437a1
-EBUILD naim-0.11.8.3.1.ebuild 1211 RMD160 ef4e8c072866b6af184407f440adc55fcc6e32c0 SHA1 0c370f4235448dccf4d4a3442fbbe2ef4e7c48ec SHA256 3786eaa96aa1f1a6870cd250036c29fb7ef695efd80d75b2382c680dcee0177a
-MISC ChangeLog 10300 RMD160 6bf53e99bc45c61db3315e63602875c76d53c7da SHA1 d4f6348992cb81b556b0fee0255d9f22caf215d3 SHA256 c5957c9d9605000bb317f786dda4e07753113a6edd7505e6c4a5128072e4543c
+EBUILD naim-0.11.8.2.1.ebuild 1308 RMD160 0c694208928992f639c50a2019cc0d9d1ad01076 SHA1 df8b5b1e4f57dac3b585bbd73159d67d8c84ffc4 SHA256 02ad9eb4ac501ceeab1baf37fa8658a8a284a7d669ce599d614ee36319b37e56
+EBUILD naim-0.11.8.3.1.ebuild 1204 RMD160 5ac141e21ade9dd643a4bd197ae3e6ec87cbf9a2 SHA1 91cf3f7466ae669e58bc8d9b5bc970c19674c506 SHA256 5f3888d2eb550f0625e1b01d6026db23bfcc5e5434850b037373fd8a6c3f7257
+MISC ChangeLog 10450 RMD160 bbfa95d1a39a06ad89ba764d7b541ebbd56d3f3d SHA1 546fbf21c5c7bd5b177a3e912d340c5d5a5c5c93 SHA256 ac4d57592acee73c61213a0d6c1bd7003f7a02a407590ce0ac116a6d2c7a9e5e
 MISC metadata.xml 389 RMD160 d2fecf3626e69a51f73564a2d16600c116e2ecd2 SHA1 09bee8ab56de79efab3ac7fbca83d4297e7aa92c SHA256 c793e022b6819fc49b88f676f1f83c200dae7b444d26215a584f279672290b93
