@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/naim/naim-0.11.8.3.1.ebuild,v 1.2 2008/03/31 02:08:51 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/naim/naim-0.11.8.3.1.ebuild,v 1.3 2009/05/09 20:13:29 gentoofan23 Exp $
 
 DESCRIPTION="An ncurses based AOL Instant Messenger"
 HOMEPAGE="http://naim.n.ml.org"
@@ -19,12 +19,12 @@ RDEPEND="${DEPEND}"
 
 src_unpack() {
 	unpack ${A}
+	cd "${S}"
 
 	# Alter makefile so firetalk-int.h is installed
-	cd "${S}"
 	sed -i 's/include_HEADERS = firetalk.h/include_HEADERS = firetalk.h firetalk-int.h/' \
 		libfiretalk/Makefile.am \
-		libfiretalk/Makefile.in
+		libfiretalk/Makefile.in || die "Sed failed!"
 }
 
 src_compile() {
@@ -36,8 +36,7 @@ src_compile() {
 
 	econf \
 		--with-pkgdocdir="${EPREFIX}"/usr/share/doc/${PF} \
-		${myconf} \
-		|| die "configure failed"
+		${myconf}
 
 	emake || die "make failed"
 }
